--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
 </head>
 
 <body>
-    <main>
-        <article>
-            <img src="img/avatar.png" alt="Profile picture">
-            <div>
-                <header>
-                    <h1>Daniel Konnek</h1>
-                    <p>frontend dev</p>
+    <main class="main">
+        <article class="card">
+            <img class="card__picture" src="img/avatar.png" alt="Profile picture">
+            <div class="card__text-container">
+                <header class="card__header">
+                    <h1 class="card__heading">Daniel Konnek</h1>
+                    <p class="card__specialization">frontend dev</p>
                 </header>
-                <p>Programmer with weeks of experience, photographer, motion designer, sporty guy, that own a cat.
+                <p class="card__description">Programmer with weeks of experience, photographer, motion designer, sporty
+                    guy, that own a cat.
                     Really excite about new technologies, gadgets and food.</p>
-                <p>Socials: Facebook, GitHub, Instagram, Behance.</p>
+                <p class="card__description">Socials: <a href="#" class="card__link">Facebook</a>, <a href="#"
+                        class="card__link">GitHub</a>, <a href="#" class="card__link">Instagram</a>, <a href="#"
+                        class="card__link">Behance.</a></p>
             </div>
         </article>
     </main>
