change picture and style everything

--- a/index.html
+++ b/index.html
@@ -12,21 +12,27 @@
 
 <body>
     <main class="main">
-        <article class="card">
-            <img class="card__picture" src="img/avatar.png" alt="Profile picture">
+        <div class="card">
+            <img class="card__picture"
+                src="https://scontent.fpoz2-1.fna.fbcdn.net/v/t1.0-9/p960x960/72035417_2925850280775937_1427192927808913408_o.jpg?_nc_cat=100&_nc_sid=7aed08&_nc_ohc=dzUgTHFXtgsAX_pojKy&_nc_ht=scontent.fpoz2-1.fna&_nc_tp=6&oh=12f9aa64b0efa7fb99aef9dccb982265&oe=5EE2471E"
+                alt="Profile picture">
             <div class="card__text-container">
                 <header class="card__header">
                     <h1 class="card__heading">Daniel Konnek</h1>
                     <p class="card__specialization">frontend dev</p>
                 </header>
-                <p class="card__description">Programmer with weeks of experience, photographer, motion designer, sporty
-                    guy, that own a cat.
-                    Really excite about new technologies, gadgets and food.</p>
-                <p class="card__description">Socials: <a href="#" class="card__link">Facebook</a>, <a href="#"
-                        class="card__link">GitHub</a>, <a href="#" class="card__link">Instagram</a>, <a href="#"
-                        class="card__link">Behance.</a></p>
+                <p class="card__description card__description--with-margin">Programmer with <span
+                        class="important-text">weeks of experience</span>,
+                    photographer, motion designer, sporty
+                    guy, that <span class="important-text">own a cat</span>.
+                    Really excited about new technologies, gadgets and food. By the way loves food so much.</p>
+                <p class="card__description">Socials: <a href="https://www.facebook.com/ac.konneki" target="_blank"
+                        class="card__link">Facebook</a>, <a href="https://github.com/konneki" target="_blank"
+                        class="card__link">GitHub</a>, <a href="https://www.instagram.com/konneki/" target="_blank"
+                        class="card__link">Instagram</a>, <a href="https://www.behance.net/konneki_" target="_blank"
+                        class="card__link">Behance</a>.</p>
             </div>
-        </article>
+        </div>
     </main>
 
 </body>
